--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Totalizador</h1>
+    <form id="totalizador-form">
+      <label for="cantidaditem">Cantidad de item:</label>
+      <input type="number" id="cantidaddeitem" />
+      <label for="precioitem">Precio por item:</label>
+      <input type="number" id="precioporitem" />
+      <input type="submit" value="Totalizar" id="total-button" />
     </form>
     <div id="resultado-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
+
