Arreglos funcionales en la interfaz

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <br>
       <input type="submit" value="Totalizar" id="total-button" />
     </form>
-    <div id="resultado-div"></div>
+    <div id="total-div"></div>
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
