--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
       <br>
       <input type="number" id="precioporitem" />
       <br>
+      <select name="impuestoEstado" id="impuestoEstado">
+        <option value="CA">CA</option>
+        <option value="UT">UT</option>
+        <option value="NV">NV</option>
+        <option value="TX">TX</option>
+        <option value="AL">AL</option>
+      </select>
       <input type="submit" value="Totalizar" id="total-button" />
     </form>
     <div id="total-div"></div>
