--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <h1>Totalizador</h1>
     <form id="totalizador-form">
       <label for="cantidaditem">Cantidad de item:</label>
-      <br>
       <input type="number" id="cantidaddeitem" />
       <br>
-      <label for="precioitem">Precio por item:</label>
       <br>
+      <label for="precioitem">Precio por item   :</label>
       <input type="number" id="precioporitem" />
       <br>
+      <br>
+      <label for="codigoEstado">Codigo de Estado: </label>
       <select name="impuestoEstado" id="impuestoEstado">
         <option value="CA">CA</option>
         <option value="UT">UT</option>
@@ -17,6 +18,8 @@
         <option value="TX">TX</option>
         <option value="AL">AL</option>
       </select>
+      <br>
+      <br>
       <input type="submit" value="Totalizar" id="total-button" />
     </form>
     <div id="total-div"></div>
